--- a/style.css
+++ b/style.css
@@ -1,14 +1,10 @@
-.content-box{
-    max-width: 960px;
-    border:1px solid  grey;
-}
-
 a{
     text-decoration: none;
 }
 
 .grid-container{
     display: grid;
+    max-width: 660px;
     grid-template-areas: 'auto auto auto auto';
     column-gap: 12px;
     row-gap: 12px;
@@ -18,6 +14,7 @@ a{
     text-align: center;
     color: white;
     padding: 10px;
+    border: 1px solid black;
 }
 
 .item1{
@@ -30,15 +27,27 @@ a{
 
 .item3{
     grid-column: 1 / 5;
+    background-color: pink;
 }
 
+img{
+    max-width: 468px;
+    max-height: 600px;
+    font-size: x-large;
+}
 
 .item4{
     grid-column: 1 / 3;
+    background: url(https://images.pexels.com/photos/2876035/pexels-photo-2876035.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+    width: 468px;
+    height: 600px;
 }
 
 .item5{
     grid-column: 3 / 5;
+    background: url(https://images.pexels.com/photos/1913161/pexels-photo-1913161.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+    width: 468px;
+    height: 600px;
 }
 
 .item6{
@@ -126,5 +135,9 @@ a{
 }
 
 .item23{
+    font-weight: bold;
+}
+
+.free{
     font-weight: bold;
 }
