--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 a{
     text-decoration: none;
+    font-size: 10px;
 }
 
 .grid-container{
     display: grid;
-    max-width: 660px;
+    max-width: 960px;
     grid-template-areas: 'auto auto auto auto';
     column-gap: 12px;
     row-gap: 12px;
@@ -23,71 +24,100 @@ a{
 
 .item2{
     grid-column: 1 / 5;
+    background: url(https://images.pexels.com/photos/916344/pexels-photo-916344.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+    height: 400px;
+    position: no-repeat;
 }
 
 .item3{
     grid-column: 1 / 5;
     background-color: pink;
-}
-
-img{
-    max-width: 468px;
-    max-height: 600px;
-    font-size: x-large;
+    font-size: 25px;
+    text-align: center;
 }
 
 .item4{
     grid-column: 1 / 3;
     background: url(https://images.pexels.com/photos/2876035/pexels-photo-2876035.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
     width: 468px;
-    height: 600px;
+    height: 350px;
 }
 
 .item5{
     grid-column: 3 / 5;
     background: url(https://images.pexels.com/photos/1913161/pexels-photo-1913161.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
     width: 468px;
-    height: 600px;
+    height: 350px;
 }
 
 .item6{
     grid-column: 1 / 3;
+    background: url(https://images.pexels.com/photos/3214241/pexels-photo-3214241.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+    width: 468px;
+    height: 350px;
 }
 
 .item7{
     grid-column: 3 / 5;
+    background: url(https://images.pexels.com/photos/8058602/pexels-photo-8058602.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500);
+    width: 468px;
+    height: 350px;
 }
 
 .item8{
     grid-column: 1 / 3;
+    background: url(https://images.pexels.com/photos/3891029/pexels-photo-3891029.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+    width: 468px;
+    height: 350px;
 }
 
 .item9{
     grid-column: 3 / 5;
+    background: url(https://images.pexels.com/photos/94843/pexels-photo-94843.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+    width: 468px;
+    height: 350px;
 }
 
 .item10{
     grid-column: 1 / 3;
+    background: url(https://images.pexels.com/photos/1191536/pexels-photo-1191536.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+    width: 468px;
+    height: 350px;
 }
 
 .item11{
     grid-column: 3 / 5;
+    background: url(https://images.pexels.com/photos/2735970/pexels-photo-2735970.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+    width: 468px;
+    height: 350px;
 }
 
 .item12{
     grid-column: 1 / 3;
+    background: url(https://images.pexels.com/photos/3794119/pexels-photo-3794119.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+    width: 468px;
+    height: 350px;
 }
 
 .item13{
     grid-column: 3 / 5;
+    background: url(https://images.pexels.com/photos/380782/pexels-photo-380782.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+    width: 468px;
+    height: 350px;
 }
 
 .item14{
     grid-column: 1 / 3;
+    background: url(https://images.pexels.com/photos/1050244/pexels-photo-1050244.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+    width: 468px;
+    height: 350px;
 }
 
 .item15{
     grid-column: 3 / 5;
+    background: url(https://images.pexels.com/photos/265906/pexels-photo-265906.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+    width: 468px;
+    height: 350px;
 }
 
 .container{
@@ -101,13 +131,14 @@ img{
 }
 
 .container a:link{
-    color: grey !important;
+    color: grey;
 }
 
 
 .item16{
     color: black;
     font-weight: bold;
+    padding-right: 100px;
 }
 
 .item17{
@@ -136,8 +167,15 @@ img{
 
 .item23{
     font-weight: bold;
+    padding-right: 300px;
 }
 
 .free{
     font-weight: bold;
+    font-size: 30px;
+   
 }
+
+/* .item17 .item18 .item19 .item20 .item21 .item22{
+    font-size: 15px;
+} */
