--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ a{
 }
 
 .item17{
+    background: url(https://images.pexels.com/photos/2697608/pexels-photo-2697608.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500);
     
 }
 
