--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+
+
+
+body {
+ font-family: 'Playfair Display', serif;
+ max-width: 960px;
+ margin: auto;
+}
 .content_wrapper {
- border: 2px solid black; 
 margin: auto; 
 }
 
@@ -8,72 +16,206 @@ margin: auto;
 .header {
  display: grid;
  grid-template-columns: 20% 80%;
- border: 2px solid green;
  background-color:#E9E9E9 ;
 }
 
 .logo {
- 
- align-items
- border: 2px solid brown;
  padding: 1em;
 }
 
 .navigation_menu {
  display: grid;
- grid-template-columns: repeat(9,1fr);
- border: 2px solid rgb(0, 109, 128);
- padding: 1em;
+ grid-template-columns: repeat(7,1fr);
+ font-size: 12px;
+ text-align: center;
+ padding-right: 100px;
+ padding-top: 20px;
+ gap: 10px;
+
+ 
 }
 
 
  /* MAIN CONTENT */
 
 .main_content {
- border: 2px solid salmon;
  text-align: center;
- 
- 
+ display: grid;
+ grid-template-columns: 1fr;
+ gap: 5px;
+}
+
+.main_image {
+ height: 500px;
+ background-image: url(https://images.pexels.com/photos/1338130/pexels-photo-1338130.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+ background-size: cover;
+ background-repeat: no-repeat;
+ background-position: center;
+
 }
 
  .promo_banner {
-  border: 2px solid red;
- }
- .main_image {
-  height: 400px;
-  background-image: url(assets/pexels-pok-rie-2049422.jpg);
-  background-size: cover;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 5px;
+  font-size: 40px;
+  color: black;
  }
 
  .banner_promo40 {
-  background-color: salmon;
-  margin: auto;
+  background-color: #F6C6C2;;
   padding-top: 20px;
-  padding-bottom: 20px;
-
+  padding: 20px 0px 20px 0px;
  } 
-
+ 
  /* Shop Display */
-
+ 
  .shop {
-  border: 2px solid yellowgreen;
   display: grid;
   grid-template-columns: 50% 50%;
   gap: 5px;
-  
+  font-size: 40px;
+  color: white;
  }
 
  .shop > div {
   background-color: sandybrown;
-  height: 300px;
+  max-height: 468px;
   
+
+  
+ }
+
+ .Top_seller {
+  background-image: url(https://images.pexels.com/photos/458766/pexels-photo-458766.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+  background-size: cover;
+  background-position: bottom;
+  padding-top: 220px;
+
+  
+  }
+
+ .new_in {
+  background-image: url(https://images.pexels.com/photos/1716539/pexels-photo-1716539.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+ background-size: cover;
+ background-position: center;
+ padding-top: 180px;
+
+ }
+
+p {
+ font-size: 15px;
+ padding-bottom:40px;
+}
+
+ .Earrings {
+  background-image: url(https://images.pexels.com/photos/7383107/pexels-photo-7383107.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+  background-size: cover;
+  background-position: center;
+  padding-top: 220px;
+
+ }
+ .Loose_Earrings {
+  background-image:url(https://images.pexels.com/photos/210645/pexels-photo-210645.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+  background-size: cover;
+  background-position: center;
+  padding-top: 220px;
+
+ }
+ 
+ .Collars {
+  background-image: url(https://images.pexels.com/photos/1454171/pexels-photo-1454171.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+  background-size: cover;
+  background-position: bottom;
+  padding-top: 220px;
+
+ }
+
+ .Rings {
+  background-image: url(https://images.pexels.com/photos/567952/pexels-photo-567952.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+  background-size: cover;
+  background-position: center;
+  padding-top: 220px;
+
+ }
+ 
+
+ .Bracelets {
+  background-image:url(https://images.pexels.com/photos/1191531/pexels-photo-1191531.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+  background-size: cover;
+  background-position: center;
+  padding-top: 220px;
+
+ }
+
+ .Céline_Diamonds { 
+  background-image:url(https://images.pexels.com/photos/3474504/pexels-photo-3474504.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+  background-size: cover;
+  padding-top: 220px;
+  color: black;
+
+ }
+
+  .Custom_jewelry {
+   background-image:url(https://images.pexels.com/photos/185489/pexels-photo-185489.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500);
+   background-size: cover;
+   background-position: center;
+   padding-top: 220px;
+
+  }
+ 
+
+ .Watches {
+  background-image:url(https://images.pexels.com/photos/157627/watch-fashion-accessories-clothes-157627.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+  background-size: cover;
+  background-position: bottom;
+  padding-top: 220px;
+ }
+
+ .Shops {
+  background-image:url(https://images.pexels.com/photos/3965545/pexels-photo-3965545.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+  background-size: cover;
+  background-position: center;
+  color: black;
+  padding-top: 220px;
+
+ }
+
+ .Shop_the_Look {
+  background-image:url(https://images.pexels.com/photos/3064352/pexels-photo-3064352.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+  background-size: cover;
+  background-position: center;
+  padding-top: 220px;
+
  }
 
 
  /* FOOTER */
 
 .footer {
- border: 2px solid blue;
+ display: grid;
+ grid-template-columns: 1fr;
+ padding-bottom: 50px;
 }
  
-.footer_nav_bar {}
+.footer_nav_bar {
+ display: grid;
+ grid-template-columns: 20% 20% 20% 20%;
+ gap: 50px;
+}
+
+hr {
+
+}
+
+li {
+ list-style-type: none;
+}
+
+a:link {
+ color: grey;
+ text-decoration: none;
+}
+a:hover {
+ color: black;
+}
