--- a/style.css
+++ b/style.css
@@ -2,17 +2,15 @@
 
 body{
     font-family: 'Playfair Display', serif;
+    margin: auto;
+    max-width: 960px;
 }
 
 a{
     text-decoration: none;
+    color: black;
     font-size: 10px;
 }
-
-/* .content-box{
-    justify-content: center;
-    background-color: #e9e9e9;
-} */
 
 .grid-container{
     display: grid;
