--- a/style.css
+++ b/style.css
@@ -14,10 +14,11 @@ a{
 
 .grid-container{
     display: grid;
-    max-width: 960px;
+    width: 100%;
     grid-template-areas: 'auto auto auto auto';
     column-gap: 6px;
     row-gap: 6px;
+    margin: auto;
 }
 
 .item1{
@@ -26,12 +27,6 @@ a{
 
 .item2{
     grid-column: 1 / 5;
-    background: url(https://images.pexels.com/photos/916344/pexels-photo-916344.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
-    height: 500px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position-y: -200px;
-    background-color: blanchedalmond;
 }
 
 .item3{
@@ -44,135 +39,131 @@ a{
 
 .item4{
     grid-column: 1 / 3;
-    background: url(https://images.pexels.com/photos/2876035/pexels-photo-2876035.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
-    background-position-y: 0px;
-    background-position-x: -50px;
-    width: 480px;
+    background-image: url(https://images.pexels.com/photos/458766/pexels-photo-458766.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+
+    background-size: cover;
+    width: 100%;
+    max-width: 480px;
     height: 350px;
 }
 
 .item5{
     grid-column: 3 / 5;
-    background: url(https://images.pexels.com/photos/1913161/pexels-photo-1913161.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
-    background-position-y: -150px;
-    background-position-x: -20px;
-    width: 480px;
+    background-image: url(https://images.pexels.com/photos/1716539/pexels-photo-1716539.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+    background-size: cover;
+    width: 100%;
+    max-width: 480px;
     height: 350px;
 }
 
 .item6{
     grid-column: 1 / 3;
-    background: url(https://images.pexels.com/photos/3214241/pexels-photo-3214241.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
-    background-position-y: 0px;
-    background-position-x: -150px;
-    width: 480px;
+    background-image: url(https://images.pexels.com/photos/7383107/pexels-photo-7383107.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+    background-size: cover;
+    width: 100%;
+    max-width: 480px;
     height: 350px;
 }
 
 .item7{
     grid-column: 3 / 5;
-    background: url(https://images.pexels.com/photos/8058602/pexels-photo-8058602.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500);
-    background-position-y: -15px;
-    background-position-x: -20px;
-    width: 480px;
+    background-image:url(https://images.pexels.com/photos/210645/pexels-photo-210645.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+    background-size: cover;
+    width: 100%;
+    max-width: 480px;
     height: 350px;
 }
 
 .item8{
     grid-column: 1 / 3;
-    background: url(https://images.pexels.com/photos/3891029/pexels-photo-3891029.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
-    background-size: contain;
-    background-size: 120%;
-    width: 480px;
+    background-image: url(https://images.pexels.com/photos/1454171/pexels-photo-1454171.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+    background-size: cover;
+    width: 100%;
+    max-width: 480px;
     height: 350px;
 }
 
 .item9{
     grid-column: 3 / 5;
-    background: url(https://images.pexels.com/photos/94843/pexels-photo-94843.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
-    background-size: contain;
-    background-size: 120%;
-    width: 480px;
+    background-image: url(https://images.pexels.com/photos/567952/pexels-photo-567952.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+    background-size: cover;
+    width: 100%;
+    max-width: 480px;
     height: 350px;
 }
 
 .item10{
     grid-column: 1 / 3;
-    background: url(https://images.pexels.com/photos/1191536/pexels-photo-1191536.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
-    background-position-y: -200px;
-    background-position-x: 0px;
-    width: 480px;
+    background-image:url(https://images.pexels.com/photos/1191531/pexels-photo-1191531.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+    background-size: cover;
+    width: 100%;
+    max-width: 480px;
     height: 350px;
 }
 
 .item11{
     grid-column: 3 / 5;
-    background: url(https://images.pexels.com/photos/2735970/pexels-photo-2735970.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
-    background-position-y: -200px;
-    background-position-x: -100px;
-    width: 480px;
+    background-image:url(https://images.pexels.com/photos/3474504/pexels-photo-3474504.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+    background-size: cover;
+    width: 100%;
+    max-width: 480px;
     height: 350px;
 }
 
 .item12{
     grid-column: 1 / 3;
-    background: url(https://images.pexels.com/photos/3794119/pexels-photo-3794119.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
-    background-position-y: -150px;
-    background-position-x: -20px;
-    width: 480px;
+    background-image:url(https://images.pexels.com/photos/185489/pexels-photo-185489.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500);
+    background-size: cover;
+    width: 100%;
+    max-width: 480px;
     height: 350px;
 }
 
 .item13{
     grid-column: 3 / 5;
-    background: url(https://images.pexels.com/photos/380782/pexels-photo-380782.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
-    background-position-y: -230px;
-    background-position-x: -20px;
-    width: 480px;
+    background-image:url(https://images.pexels.com/photos/157627/watch-fashion-accessories-clothes-157627.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+    background-size: cover;
+    width: 100%;
+    max-width: 480px;
     height: 350px;
 }
 
 .item14{
     grid-column: 1 / 3;
-    background: url(https://images.pexels.com/photos/1050244/pexels-photo-1050244.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
-    background-size: contain;
-    background-size: 120%;
-    width: 480px;
+    background-image:url(https://images.pexels.com/photos/3965545/pexels-photo-3965545.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+    background-size: cover;
+    width: 100%;
+    max-width: 480px;
     height: 350px;
 }
 
 .item15{
     grid-column: 3 / 5;
-    background: url(https://images.pexels.com/photos/265906/pexels-photo-265906.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
-    background-size: contain;
-    background-size: 130%;
-    background-position-y: 0px;
-    background-position-x: -90px;
-    width: 480px;
+    background-image:url(https://images.pexels.com/photos/3064352/pexels-photo-3064352.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+    background-size: cover;
+    width: 100%;
+    max-width: 480px;
     height: 350px;
 }
 
 .item16{
     color: black;
+    width: 100%;
 }
 
 .item17{
     color: black;
+    width: 100%;
 }
 
 .item18{
     color: black;
-    min-width: 200px;
+    width: 100%;
 }
 
 .item19{
     color: black;
-}
-
-.item19 img{
-    margin-left: 40px;
-    width: 200px;
-    height: 140px;
+    max-width: 240px;
 }
 
 .item20{
@@ -194,13 +185,14 @@ a{
 .item16 .item17 .item18 .item19 {
     color: black;
     list-style-type: none;
-    height: 600px;
+    height: 100%;
+    width: 100%;
 }
 
 li{
     list-style-type: none;
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     font-size: 14px;
 }
 
@@ -209,6 +201,7 @@ li{
     grid-template-areas: 'auto auto auto auto auto auto auto auto';
     background-color: #e9e9e9;
     text-align: center;
+    width: 100%;
 }
 
 .container a:hover{
@@ -226,6 +219,11 @@ hr{
 h1{
     text-align: center;
     color: white;
-    margin-top: 240px;
+    margin-top: 200px;
     font-size: 40px;
+    padding: 95px;
+}
+
+.item5 h1{
+    margin-top: 90px;
 }
