--- a/style.css
+++ b/style.css
@@ -230,7 +230,8 @@ h1{
     width: 100%;
 }
 
-/* page 2 */
+/* page questions */
+
 .principal-content{
     display: grid;
     grid-template-areas: 'auto auto auto auto auto auto auto auto';
@@ -281,40 +282,93 @@ h1{
     grid-column: 1/4;
     border-right: 2px solid rgb(9, 211, 2);
     font-weight: bold;
+    margin-top: 50px;
 }
 
-.reponse1{
+.ask1 p{
+    padding: 5% 20% 5% 20%;
+    font-size: 15px;
+    margin-top: 15%;
+}
+
+.response1{
     grid-column: 4/9;
+    margin-top: 50px;
+}
+
+.response1 p{
+    padding: 5% 20% 5% 20%;
+    font-size: 12px;
 }
 
 .ask2{
     grid-column: 1/4;
     border-right: 2px solid rgb(9, 211, 2);
     font-weight: bold;
+    margin-top: 50px;
+}
+
+.ask2 p{
+    padding: 5% 20% 5% 20%;
+    font-size: 15px;
+    margin-top: 15%;
 }
 
 .response2{
     grid-column: 4/9;
+    margin-top: 50px;
+}
+
+.response2 p{
+    padding: 5% 20% 5% 20%;
+    font-size: 12px;
 }
 
 .ask3{
     grid-column: 1/4;
     border-right: 2px solid rgb(9, 211, 2);
     font-weight: bold;
+    margin-top: 50px;
+}
+
+.ask3 p{
+    padding: 5% 20% 5% 20%;
+    font-size: 15px;
+    margin-top: 15%;
 }
 
 .response3{
     grid-column: 4/9;
+    margin-top: 50px;
+}
+
+.response3 p{
+    padding: 5% 20% 5% 20%;
+    font-size: 12px;
 }
 
 .ask4{
     grid-column: 1/4;
     border-right: 2px solid rgb(9, 211, 2);
     font-weight: bold;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.ask4 p{
+    padding: 5% 20% 5% 20%;
+    font-size: 15px;
 }
 
 .response4{
     grid-column: 4/9;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.response4 p{
+    padding: 5% 20% 5% 20%;
+    font-size: 12px;
 }
 
 .we{
@@ -334,3 +388,123 @@ h1{
     max-width: 250px;
 }
 
+/* product page */
+
+.product-content{
+    display: grid;
+    grid-template-areas: 'auto auto auto auto';
+}
+
+.product-content div{
+    border: 1px solid black;       
+}
+
+.heading1{
+    grid-column: 1/5;
+}
+
+.title1{
+    grid-column: 1/5;
+}
+
+.title1 h3{
+    text-align: center;
+}
+
+.reverse{
+    grid-column: 1/5;
+    font-size: 12px;
+}
+
+.reverse p{
+    text-align: center;
+    background-color: palevioletred;
+    /* background-size: 20px; */
+}
+
+.more{
+    color: white;
+    font-size: 20px;
+
+}
+
+.image1{
+    grid-column: 1/3;
+}
+
+.button1{
+    grid-column: 3/5;
+}
+
+.button1 button{
+    margin-left: 11%;
+    margin-bottom: 5px;
+    padding: 1% 30%;
+    border-radius: 30px;
+    color:white;
+    background-color: rgb(253, 114, 137);
+}
+
+.price{
+    color: grey;
+    font-size: 18px;
+}
+
+.price1{
+    color: rgb(214, 0, 0);
+}
+
+.shipping{
+    font-size: 10px;
+    margin-bottom: 50px;
+}
+
+.button1 ul{
+    list-style-type: square;
+}
+
+.title-content{
+    grid-column: 1/5;
+}
+
+.title-content p{
+    text-align: center;
+}
+
+.content-image{
+    grid-column: 1/5;
+    
+}
+
+.content-image1 p{
+    text-align: center;
+}
+
+.content-image2 p{
+    text-align: center;
+}
+
+.content-image3 p{
+    text-align: center;
+}
+
+.content-image4 p{
+    text-align: center;
+}
+
+.we1{
+    
+}
+
+.jewels1{
+    
+}
+
+.present1{
+    
+}
+
+.confidence1{
+    
+    max-width: 260px; 
+}
