--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ margin: auto;
  font-size: 10px;
  text-align: center;
  padding-right: 100px;
- padding-top: 20
+ padding-top: 20;
  gap: 10px;
 }
 
@@ -96,10 +96,7 @@ margin: auto;
    padding-top: 150px;
    }
 
-  p {
-   font-size: 10px;
-   padding-bottom:40px;
-  }
+  
 
    .Earrings {
     background-image: url(https://images.pexels.com/photos/7383107/pexels-photo-7383107.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
@@ -181,7 +178,7 @@ margin: auto;
 
    }
 
-   h6 {
+   h5 {
     font-size: 20px;
    }
 
@@ -195,12 +192,12 @@ margin: auto;
  grid-template-columns: 20% 20% 20% 20%;
  gap: 50px;
  padding-bottom: 50px;
-}
-
-
-li {
+ text-align: left;
  list-style-type: none;
 }
+
+
+
 
 a:link {
  color: grey;
@@ -226,13 +223,14 @@ a:visited {
  font-size: 45px;
 }
 
-/* GRID FOR SHOP */
+/* GRID FOR SHOP INSIDE CATEGORIEs */
 
 .earrings_shop_display {
-display: grid;;
+display: grid;
 grid-template-columns: 1fr 1fr 1fr 1fr;
 text-align: center;
-padding: 50px;
+padding: 20px;
+font-size: 12px;
 }
 
 
@@ -241,7 +239,7 @@ padding: 50px;
  background-color: rgb(255, 184, 176);
  padding: px;
  text-align: center;
- margin: 20px 350px;
+ margin:auto;
 
  
 } 
@@ -252,4 +250,102 @@ padding: 50px;
 
 .categories a:visited {
  color: rgb(136, 136, 177);
+}
+
+
+/* FAQ */
+
+.faq {
+ display: grid;
+ grid-template-columns: 25% 5% 70% ;
+ padding: 50px;
+}
+
+.FAQ_h1 {
+ text-align: center;
+ padding:5px
+}
+
+.FAQ_head_banner {
+ font-size: 29px;
+ text-align: center;
+ background-image: url(https://cdn.pixabay.com/photo/2017/08/05/00/19/light-2581929_960_720.jpg);
+ padding: 140px 120px;
+ background-position-y: -80px;
+ color: white;
+}
+
+.faq h4{
+font-size: 16px;
+text-transform: uppercase;
+text-align: left;
+}
+
+.faq p {
+ font-size: 12px;
+ text-align: justify;
+ padding: 10px;
+}
+
+.faq svg {
+ color: green;
+ padding-right: 10px;
+}
+
+
+/* GRID Main Content Product */
+
+.grid_product {
+ display: grid;
+ grid-template-columns: 1fr 1fr;
+
+}
+
+.mini-gallery {
+ display: grid;
+ grid-template-columns: repeat(3,1fr);
+}
+
+
+
+h6 {
+ font-size: 20px;
+ text-align: center;
+ color: black;
+ padding-top: 4em;  
+}
+
+.related_products {
+ display: flexbox
+ 
+}
+
+.add_to_cart {
+ width: 960px%;
+ color: white;
+ background-color: #ED6E7F;
+ border-radius: 20px;
+ text-align: center;
+ padding: 10px;
+ margin: 2px
+}
+
+.origin_icons {
+ text-align: center;
+ padding: 1em;
+ ;
+}
+
+.product_header h1 {
+ text-align: center;
+}
+
+.opinion_and_return {
+list-style-position: inside;
+list-style-type: none;
+}
+
+.opinion_and_return li:before {
+ content:"+";
+ padding-right: 120px;
 }
