--- a/style.css
+++ b/style.css
@@ -225,9 +225,13 @@ h1{
 }
 
 .item5 h1{
-    margin-top: 90px;
-    display: grid;
-    width: 100%;
+    margin-top: 150px;
+    margin-bottom: -90px;
+}
+
+.item5 h2{
+    color: white;
+    text-align: center;
 }
 
 /* page questions */
@@ -462,7 +466,8 @@ h1{
 }
 
 .button1 ul{
-    list-style-type: square;
+    list-style-type: none;
+    list-style-position: inside;
 }
 
 .button1 .center{
@@ -533,84 +538,77 @@ h1{
 
 .category-page{
     display: grid;
-    /* grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, auto); */
-    grid-template-areas:'header-l header header header'
-                        'header-1 header-1 header-1 header-1'
-                        'content content content content'
-                        'footer-1 footer-2 footer-3 footer-4';
+    grid-template-areas:'auto header header header';
 }
 
-.category-page .div{
-    background-color: black;
+.category-page .header{
+    grid-column: 1/5;
 }
 
-.category-page .header-l{
-    grid-area: header-l;
+.category-page .header-2{
+    grid-column: 1/5;
+    margin-top: -40px;
 }
 
-.category-page .header-e{
-    grid-area: header-e;
+.category-page .header-1{
+    grid-column: 1/5;
 }
 
-.category-page .header-j{
-    grid-area: header-j;
+.category-page .header-1 .text-up{
+    background-image: url('https://images.pexels.com/photos/1338130/pexels-photo-1338130.jpeg');
+    padding: 10% 0%;
+    font-size: 40px;
+    font-weight: bold;
 }
 
-.category-page .header-o{
-    grid-area: header-o;
+.category-page p{
+    text-align: center;
 }
 
-.category-page .header-s{
-    grid-area: header-s;
+.category-page .content-1-1{
+    grid-column: 1/2;
 }
 
-.category-page .header-t{
-    grid-area: header-t;
+.category-page .content-1-2{
+    grid-column: 2/3;
 }
 
-.category-page .header-a{
-    grid-area: header-a;
+.category-page .content-1-3{
+    grid-column: 3/4;
 }
 
-.category-page .header-m{
-    grid-area: header-m;
+.category-page .content-1-4{
+    grid-column: 4/5;
 }
 
-
-.category-page .header-f{
-    grid-area: header-f;
+.category-page .content-2-1{
+    grid-column: 1/2;
 }
 
-.category-page .header-e{
-    grid-area: header-e;
+.category-page .content-2-2{
+    grid-column: 2/3;
 }
 
-.category-page .header-e{
-    grid-area: header-e;
+.category-page .content-2-3{
+    grid-column: 3/4;
 }
 
-.category-page .header-e{
-    grid-area: header-e;
+.category-page .content-2-4{
+    grid-column: 4/5;
 }
 
-
-.category-page .content{
-    grid-area: content;
+.category-page .content-3-1{
+    grid-column: 1/2;
 }
 
-.category-page .footer-1{
-    grid-area: footer-1;
+.category-page .content-3-2{
+    grid-column: 2/3;
 }
 
-.category-page .footer-2{
-    grid-area: footer-2;
+.category-page .content-3-3{
+    grid-column: 3/4;
 }
 
-.category-page .footer-3{
-    grid-area: footer-3;
-}
-
-.category-page .footer-4{
-    grid-area: footer-4;
+.category-page .content-3-4{
+    grid-column: 4/5;
 }
